--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,6 +40,12 @@ h3 {
 	margin : 0px;
 }
 
+p {
+	font-size: 16px;
+	color: gray;
+	margin : 0px;
+}
+
 canvas {
 	background-color: greenyellow;
 }
