--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,9 +50,15 @@ canvas {
 	background-color: greenyellow;
 }
 
-.col {
+.tit {
 	display: inline-block;
 	width : 400px;
+	_background-color: green;
+}
+
+.col {
+	display: inline-block;
+	width : 300px;
 	_background-color: green;
 }
 
