--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,9 @@
-$font-stack: 'Sansation Light', Lobster, arial, cursive;
+$font-stack: Sansation Light, Ubuntu, arial, cursive;
 
-@import url(http://fonts.googleapis.com/css?family=Lobster);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:300);
 
 @font-face {
-	font-family: 'Sansation Light';
+	font-family: Sansation Light;
 	src: url(../fonts/sansation-light.woff);
 }
 
