--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+	--width: 300px;
+	--max-width: 500px;
+}
+
 * {
 	font-family: 'Courier New', Courier, monospace;
 }
@@ -6,25 +11,19 @@ html {
 	height: 100%
 }
 
-body, header, article, footer {
+body,
+header,
+article,
+footer {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 
-body {
-	align-items: center;
-	background-color: white;
-	padding: 1rem;
-}
-
 h1 {
-	display: none;
-}
-
-h2, h3, p {
-	color: gray
+	font-size: .5rem;
+	color: transparent;
 }
 
 h2 {
@@ -35,27 +34,25 @@ h3 {
 	font-size: 1.2rem;
 }
 
+h1,
+h2,
+h3 {
+	margin-bottom: 0;
+}
+
 p {
-	text-align: justify;
+	text-align: center;
+	margin: .5rem 0;
 }
 
-header, footer {
-	width: 50%;
-	min-width: 300px;
-	max-width: 550px;
-}
-
-header>img {
-	width: 100%;
-	min-width: 300px;
+header,
+footer {
+	min-width: var(--width);
+	max-width: var(--max-width);
 }
 
 article {
-	width: 300px;
-}
-
-canvas {
-	border: 0;
+	width: var(--width);
 }
 
 .icon {
