--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+
 :root {
 	--width: 300px;
 	--max-width: 500px;
 }
 
 * {
-	font-family: 'Courier New', Courier, monospace;
+	font-family: 'Source Code Pro', 'Courier New', Courier, monospace;
+	font-size: 1rem;
 }
 
 html {
@@ -19,6 +22,7 @@ footer {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin: auto;
 }
 
 h1 {
@@ -56,5 +60,5 @@ article {
 }
 
 .icon {
-	width: 1rem;
+	width: 1.5rem;
 }
